core/testing/snapshots/operators/modulo.snap
### TITLE ###
Modulo_PositiveInts
### INPUT ###
print(4 % 1)
print(4 % 2)
print(4 % 3)
print(4 % 4)
print(4 % 5)
### STDOUT ###
0
0
1
0
4

### TITLE ###
Modulo_NegativeInts
### INPUT ###
print(-1 % 3)
print(-2 % 3)
print(-3 % 3)
print(-4 % 3)

print(3 % -1)
print(3 % -2)
print(3 % -3)
print(3 % -4)
### STDOUT ###
-1
-2
0
-1
0
1
0
3

### TITLE ###
Modulo_PositiveFloats
### INPUT ###
print(1.25 % 0.5)
print(5.0 % 2.5)
print(5.0 % 2.0)
print(10.0 % 3.0)
print(10.0 % 3.3)
### STDOUT ###
0.25
0
1
1
0.10000000000000053

### TITLE ###
Modulo_NegativeFloats
### INPUT ###
print(-1.25 % 0.5)
print(-5.0 % 2.5)
print(-5.0 % 2.0)
print(-10.0 % 3.0)
print(-10.0 % 3.3)

print(1.25 % -0.5)
print(5.0 % -2.5)
print(5.0 % -2.0)
print(10.0 % -3.0)
print(10.0 % -3.3)

print(-1.25 % -0.5)
print(-5.0 % -2.5)
print(-5.0 % -2.0)
print(-10.0 % -3.0)
print(-10.0 % -3.3)
### STDOUT ###
-0.25
-0
-1
-1
-0.10000000000000053
0.25
0
1
1
0.10000000000000053
-0.25
-0
-1
-1
-0.10000000000000053

### TITLE ###
Modulo_CompoundOperatorInts
### INPUT ###
a = 10
a %= 6
print(a)

b = -10
b %= 6
print(b)

c = 10
c %= -6
print(c)

d = -10
d %= -6
print(d)
### STDOUT ###
4
-4
4
-4

### TITLE ###
Modulo_CompoundOperatorFloats
### INPUT ###
a = 7.2
a %= 3.5
print(a)

b = -7.2
b %= 3.5
print(b)

c = 7.2
c %= -3.5
print(c)

d = -7.2
d %= -3.5
print(d)
### STDOUT ###
0.20000000000000018
-0.20000000000000018
0.20000000000000018
-0.20000000000000018

### TITLE ###
Modulo_PositiveIntModulo0Errors
### INPUT ###
print(5 % 0)
### STDERR ###
error[RAD20036]: Value is 0, cannot modulo by 0
  --> <script>:1:11
  |
1 | print(5 % 0)
  |           ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Modulo_NegativeIntModulo0Errors
### INPUT ###
print(-5 % 0)
### STDERR ###
error[RAD20036]: Value is 0, cannot modulo by 0
  --> <script>:1:12
  |
1 | print(-5 % 0)
  |            ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Modulo_PositiveFloatModulo0Errors
### INPUT ###
print(5.5 % 0)
### STDERR ###
error[RAD20036]: Value is 0, cannot modulo by 0
  --> <script>:1:13
  |
1 | print(5.5 % 0)
  |             ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Modulo_NegativeFloatModulo0Errors
### INPUT ###
print(-5.5 % 0)
### STDERR ###
error[RAD20036]: Value is 0, cannot modulo by 0
  --> <script>:1:14
  |
1 | print(-5.5 % 0)
  |              ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Modulo_CompoundModulo0Errors
### INPUT ###
a = 5
a %= 0
### STDERR ###
error[RAD20036]: Value is 0, cannot modulo by 0
  --> <script>:2:6
  |
1 | a = 5
2 | a %= 0
  |      ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
